plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.simas'
version = '0.0.1-SNAPSHOT'
description = 'Fishing Helper app backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.h2database:h2:2.4.240'
	testImplementation 'com.h2database:h2:2.4.240'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	implementation 'org.slf4j:slf4j-api:2.0.17'
}

tasks.named('test') {
	useJUnitPlatform()
	// Add JVM argument for Java module reflection
	jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}

tasks.named('bootRun') {
	// Add JVM argument for Java module reflection
	jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}
